# fletch-site

./: .envrc  .gitignore  Cargo.toml  README.md  scrolljack.txt
content/: contact.json  index.json  themes.json
content/blog/: 20230801_dark.xml  20230801_ssh.xml  20231227_hallsmarriagetheorem.xml  20240119_regexcomments.xml  20240325.xml  20240325_breakcondition.xml  20240409_payload_spi_isr.xml  20240414_contact.xml  20240421_pll1.xml  20240421_pll2.xml  20240428_signedoverflowUB.xml  20240506_pll3.xml  20240518_pll4.xml  20240702_dbustypes.xml  20240903_spiminit.xml
content/projects/: aero.xml  cac.xml  garm.xml  gpu.xml  surgery.xml  thing1.xml  thing2.xml  website.xml
defaulthtml-templates/: base.tera  index.liquid  index.tera  project.liquid  project.tera
html-content/: feed.tera
html-content/default/: base.tera  blogpost.tera  contact.tera  index.tera  project.tera  themes.tera
html-content/fancy/: base.tera  index.tera  project.tera  themes.tera
html-content/simple/: base.tera  blogpost.tera  css.css  index.tera  project.tera  themes.tera
src/: blogpost.rs  contact.rs  content.rs  defaulthtml.rs  imap.rs  main.rs  pop3.rs  project.rs  qotd.rs  ssh.rs
src/contact/: mod.rs
src/gopher/: content.rs  mod.rs
src/html/: contact.rs  defaulthtml.rs  fancyhtml.rs  feed.rs  mod.rs  simplehtml.rs
src/ssh/: apps.rs  contact.rs  content.rs  mod.rs  session.rs  terminal.rs
