[package]
name = "fletch-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = {version = "0.6.18", features = ["ws"]}
axum-extra = { version = "0.7.4", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["rustls", "tls-rustls"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.2"
ed25519-dalek = "1.0.1"
futures = "0.3.28"
gophermap = "0.1.2"
hyper = "0.14.27"
inkjet = { version = "0.8.0", default-features = false, features = ["html", "language-css", "language-html", "language-json", "language-javascript", "language-rust", "language-cpp", "language-c"] }
markdown = { version = "1.0.0-alpha.12", features = ["serde"] }
notify = "5.1.0"
once_cell = "1.18.0"
quick-xml = { version = "0.28.2", features = ["serialize"] }
railwind = "0.1.5"
rand = "0.8.5"
russh = "0.37.1"
russh-keys = "0.37.1"
serde = "1.0.162"
serde_json = "1.0.96"
tera = "1.19.0"
tokio = {version = "1.28.0", features = ["full"]}
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
