[package]
name = "fletch-site"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.7.4", features = ["ws"] }
axum-client-ip = "0.5.1"
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-server = "0.6.0"
axum-macros = "0.4.1"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
color-eyre = "0.6.2"
ed25519-dalek = "1.0.1"
futures = "0.3.28"
gophermap = "0.1.2"
hyper = "1.1.0"
notify = "5.1.0"
once_cell = "1.18.0"
quick-xml = { version = "0.28.2", features = ["serialize"] }
railwind = "0.1.5"
rand = "0.8.5"
rusqlite = { version = "0.31", features = ["bundled"] }
russh = "0.37.1"
russh-keys = "0.37.1"
serde = "1.0.162"
serde_json = "1.0.96"
tera = "1.19.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-rusqlite = "0.5.1"
tower-http = { version = "0.5.0", features = ["fs", "trace", "normalize-path"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
jotdown = "0.4.0"

[dev-dependencies]
axum-macros = "0.4.1"
